# convey-backend

./: README.md  docker-compose.yml  main.py  pyproject.toml  requirements.txt
alembic/: env.py
alembic/versions/: 08687cee41db_initial_schema.py  740361fab1eb_add_document_summary_link_table_and_.py
app/: config.py  database.py  main.py
app/api/: dependencies.py
app/api/routes/: auth.py  documents.py  projects.py  summaries.py  summarize.py
app/models/: database.py  request.py  response.py
app/repositories/: document.py  project.py  summary.py  user.py
app/services/: auth.py  summarizer.py
app/services/providers/: __init__.py  base.py  gemini_provider.py  openai_provider.py
docs/: DATABASE_SETUP.md
scripts/: init-db.sql  reset-local-db.sh  seed-local-db.py
