[project]
name = "convey-backend"
version = "1.0.0"
description = "Property Document Summarizer Backend - AI-powered document analysis"
requires-python = ">=3.12"
dependencies = [
    "fastapi==0.115.0",
    "uvicorn[standard]==0.30.0",
    "python-multipart==0.0.9",
    "openai>=1.40.0",
    "google-generativeai>=0.3.0",
    "pydantic==2.8.0",
    "pydantic-settings==2.4.0",
    "python-dotenv==1.0.0",
    # Database
    "sqlalchemy==2.0.23",
    "alembic==1.12.1",
    "asyncpg==0.29.0",
    "psycopg2-binary==2.9.9",
    "greenlet==3.2.4",
    # Authentication
    "passlib[bcrypt]==1.7.4",
    "python-jose[cryptography]==3.3.0",
    "bcrypt==4.1.3",
    "email-validator==2.3.0",
]

[project.optional-dependencies]
test = [
    "pytest==7.4.0",
    "pytest-asyncio==0.21.0",
    "httpx==0.24.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["app"]
